List import on the run (basic test working)
